@@ -2,6 +2,8 @@ Bug: https://bugzilla.gnome.org/show_bug.cgi?id=623223
 Bug: https://bugzilla.gnome.org/show_bug.cgi?id=651571
 Bug: https://bugzilla.gnome.org/show_bug.cgi?id=669423
 
+Index: b/data/org.gnome.settings-daemon.plugins.media-keys.gschema.xml.in.in
+===================================================================
 --- a/data/org.gnome.settings-daemon.plugins.media-keys.gschema.xml.in.in
 +++ b/data/org.gnome.settings-daemon.plugins.media-keys.gschema.xml.in.in
 @@ -90,6 +90,11 @@
@@ -16,9 +18,11 @@ Bug: https://bugzilla.gnome.org/show_bug.cgi?id=669423
      <key name="volume-down" type="s">
        <default>'XF86AudioLowerVolume'</default>
        <_summary>Volume down</_summary>
+Index: b/plugins/media-keys/shortcuts-list.h
+===================================================================
 --- a/plugins/media-keys/shortcuts-list.h
 +++ b/plugins/media-keys/shortcuts-list.h
-@@ -81,7 +81,7 @@
+@@ -82,7 +82,7 @@
          { FORWARD_KEY, NULL, N_("Forward"), "XF86AudioForward", SHELL_ACTION_MODE_ALL },
          { REPEAT_KEY, NULL, N_("Repeat"), "XF86AudioRepeat", SHELL_ACTION_MODE_ALL },
          { RANDOM_KEY, NULL, N_("Random Play"), "XF86AudioRandomPlay", SHELL_ACTION_MODE_ALL },
