@@ -1,6 +1,7 @@
 gnome-settings-daemon (3.22.0-1) UNRELEASED; urgency=medium
 
   * New upstream release.
+  * Refres debian/patches/04_superP.patch.
 
  -- Michael Biebl <biebl@debian.org>  Tue, 20 Sep 2016 22:25:20 +0200
 
